--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>Computer Science Student at AAST | Cybersecurity Major | SOC Analyst in Training | Top 6% on TryHackMe</p>
             <div class="contact-info">
                 <ul class="contact-list">
-                    <li>Location: <span style="color: #00ffcb"</span>6 October City</li>
+                    <li>Location: 6 October City</li>
                     <li>Phone: <a href="tel:+201097936088">+20 1097936088</a></li>
                     <li>Email: <a href="mailto:mohamedmostafa10110@gmail.com">mohamedmostafa10110@gmail.com</a></li>
                     <li>LinkedIn: <a href="https://www.linkedin.com/in/mohamed-mostafa-ali-73b8b8261" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a></li>
@@ -58,9 +58,9 @@
                     <li>CompTIA Linux+ XKO-005 (<strong>Cybrary</strong>)</li>
                     <li>CompTIA Security+ SY0-601 (<strong>Netriders Platform</strong>)</li>
                     <li>CompTIA CySA+ CS0-003 (<strong>Netriders Platform</strong>)</li>
-                    <li>THM Complete Beginner Learning Path</li>
-                    <li>THM Introduction to Cyber Security Learning Path</li>
-                    <li>THM Pre Security Learning Path</li>
+                    <li>THM Complete Beginner Learning Path (<strong></strong>)</li>
+                    <li>THM Introduction to Cyber Security Learning Path (<strong></strong>)</li>
+                    <li>THM Pre Security Learning Path (<strong></strong>)</li>
                     <li>MCSA (Active Directory Part) (<strong>Self-study</strong>)</li>
                 </ul>
             </section>
