--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mohamed Mostafa - Cybersecurity Specialist and SOC Analyst. Learn more about my journey in cybersecurity, certifications, and expertise.">
+    <meta name="keywords" content="Mohamed Mostafa, cybersecurity, SOC Analyst, IT security, CCNA, Linux+, Security+, ISC2 CC, AAST, Computer Science, Arab Academy for Science, Technology & Maritime Transport, Smart Village Campus">
+    <meta name="author" content="Mohamed Mostafa">
+    <meta name="robots" content="index, follow">
+
     <title>Mohamed Mostafa Ali - Cybersecurity Resume</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
