--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
                     <img src="amit1.jpg" alt="Certification 8">
                     <img src="maharanet.jpg" alt="Certification 9">
                     <img src="maharasec.jpg" alt="Certification 10">
-                    <img src="cc1.jpg" alt="Certification 11">
-                    <img src="cc2.jpg" alt="Certification 12">
-                    <img src="cc3.jpg" alt="Certification 13">
+                    <img src="FinalCC.jpg" alt="Certification 11">
                 </div>
             </section>
         </div>
