--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
                     <li>CCNA CyberOps (<strong>AMIT</strong>)</li>
                     <li>Red Hat System Administration I (<strong>Mahara Tech</strong>)</li>
                     <li>CompTIA Linux+ XKO-005 (<strong>Cybrary</strong>)</li>
+                    <li>(ISC)² CC (Certified in Cybersecurity) (<strong>(ISC)² Obrizum</strong>)</li>
                     <li>CompTIA Security+ SY0-601 (<strong>Netriders Platform</strong>)</li>
                     <li>CompTIA CySA+ CS0-003 (<strong>Netriders Platform</strong>)</li>
-                    <li>THM Complete Beginner Learning Path</li>
-                    <li>THM Introduction to Cyber Security Learning Path</li>
-                    <li>THM Pre Security Learning Path</li>
+                    <li>THM Complete Beginner Learning Path (<strong>TryHackMe</strong>)</li>
+                    <li>THM Introduction to Cyber Security Learning Path (<strong>TryHackMe</strong>)</li>
+                    <li>THM Pre Security Learning Path (<strong>TryHackMe</strong>)</li>
                     <li>MCSA (Active Directory Part) (<strong>Self-study</strong>)</li>
                 </ul>
             </section>
