--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
             </section>
 
             <section class="certifications">
-                <h2>Certifications <span style="font-size: 16px; white-space: nowrap;">(The certifications are arranged from left to right, showcasing each one visually in a grid format.)</span></h2>
+                <h2>Certifications</h2>
+	        <p class="description">
+	      	    (The certifications are arranged from left to right, showcasing each one visually in a grid format.)
+	        </p>
                 <div class="certification-grid">
                     <img src="amit0.jpg" alt="Certification 7">
                     <img src="amit1.jpg" alt="Certification 8">
                     <img src="tryhackme2.png" alt="Certification 6">
                     <img src="tryhackme0.png" alt="Certification 4">
-
                     <img src="tryhackme1.png" alt="Certification 5">
                     <img src="maharanet.jpg" alt="Certification 9">
                     <img src="maharasec.jpg" alt="Certification 10">
                     <img src="linux+.jpg" alt="Certification 2">
-
-
                     <img src="sec+.jpg" alt="Certification 1">
                     <img src="redhat.jpg" alt="Certification 3">
                     <img src="FinalCC.jpg" alt="Certification 11">
