--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
             <section class="certifications">
                 <h2>Certifications</h2>
 	        <p class="description">
-	      	    (The certifications are arranged from left to right, showcasing each one visually in a grid format.)
-	        </p>
+  	            (On PCs, the certifications are arranged from left to right, showcasing each one visually in a grid format. On mobile devices, they are displayed from top to bottom.)</p>
                 <div class="certification-grid">
                     <img src="amit0.jpg" alt="Certification 7">
                     <img src="amit1.jpg" alt="Certification 8">
