--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li>TryHackMe: <a href="https://tryhackme.com/p/mohamedmostafa11" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
                     <li>Credly: <a href="https://www.credly.com/users/mohamed-mostafa.03888777" target="_blank" rel="noopener noreferrer">Credly Profile</a></li>
                     <li><a href="ATS.pdf" target="_blank" class="btn-download" download>Download CV (PDF Version)</a></li>
-                    <li><a href="Infographic.pdf" target="_blank" class="btn-download" download>Infographic (Roadmap Visualization) (PDF Version)</a></li>
+                    <li><a href="Infographic_roadmap_merged.pdf" target="_blank" class="btn-download" download>Infographic (Roadmap Visualization) (PDF Version)</a></li>
                 </ul>
             </div>
         </aside>
@@ -58,16 +58,16 @@
                     <li>AMIT SOC Diploma (<strong>AMIT</strong>)</li>
                     <li>CCNA 200-301 (<strong>AMIT & Self-study</strong>)</li>
                     <li>CCNA Network Security (<strong>AMIT</strong>)</li>
-                    <li>CCNA CyberOps (<strong>AMIT</strong>)</li>
+                    <li>Cisco CyberOps (<strong>AMIT</strong>)</li>
+                    <li>MCSA (Active Directory Part) (<strong>Self-study</strong>)</li>
                     <li>Red Hat System Administration I (<strong>Mahara Tech</strong>)</li>
                     <li>CompTIA Linux+ XKO-005 (<strong>Cybrary</strong>)</li>
                     <li>(ISC)² CC (Certified in Cybersecurity) (<strong>(ISC)² Obrizum</strong>)</li>
                     <li>CompTIA Security+ SY0-601 (<strong>Netriders Platform</strong>)</li>
-                    <li>CompTIA CySA+ CS0-003 (<strong>Netriders Platform</strong>)</li>
+                    <li>Junior Penetration Tester (eJPTv1) (<strong>Netriders Platform</strong>)</li>
                     <li>THM Complete Beginner Learning Path (<strong>TryHackMe</strong>)</li>
                     <li>THM Introduction to Cyber Security Learning Path (<strong>TryHackMe</strong>)</li>
                     <li>THM Pre Security Learning Path (<strong>TryHackMe</strong>)</li>
-                    <li>MCSA (Active Directory Part) (<strong>Self-study</strong>)</li>
                 </ul>
             </section>
 
@@ -142,6 +142,7 @@
                     <img src="sec+.jpg" alt="Certification 1">
                     <img src="redhat.jpg" alt="Certification 3">
                     <img src="FinalCC.jpg" alt="Certification 11">
+                    <img src="eJPTv1.jpg" alt="Certification 12">
                 </div>
             </section>
         </div>
