--- a/index.html
+++ b/index.html
@@ -41,33 +41,42 @@
 
     <!-- New section for profiles and documents -->
     <div class="profile-links">
-        <div class="profile-item">
-            <a href="https://tryhackme.com/p/mohamedmostafa11" target="_blank" rel="noopener noreferrer">
-                <img src="tryhackme.jpg" alt="TryHackMe Profile" class="profile-pic">
-            </a>
-        </div>
-        <div class="profile-item">
-            <a href="https://www.credly.com/users/mohamed-mostafa.03888777" target="_blank" rel="noopener noreferrer">
-                <img src="credlylogo.png" alt="Credly Profile" class="profile-pic">
-            </a>
-        </div>
-        <div class="profile-item">
-            <a href="ATS.pdf" target="_blank" class="btn-download" download>
-                <img src="pdfthumb.png" alt="Download CV" class="profile-pic">
-            </a>
-        </div>
-        <div class="profile-item">
-            <a href="Infographic_roadmap_merged.pdf" target="_blank" class="btn-download" download>
-                <img src="Infographic.png" alt="Infographic" class="profile-pic">
-            </a>
-        </div>
+    <div class="profile-item">
+        <p class="profile-title"><strong>TryHackMe Profile</strong></p>
+        <a href="https://tryhackme.com/p/mohamedmostafa11" target="_blank" rel="noopener noreferrer">
+            <img src="tryhackme.jpg" alt="TryHackMe Profile" class="profile-pic">
+        </a>
     </div>
+    <div class="profile-item">
+        <p class="profile-title"><strong>Credly Profile</strong></p>
+        <a href="https://www.credly.com/users/mohamed-mostafa.03888777" target="_blank" rel="noopener noreferrer">
+            <img src="credlylogo.png" alt="Credly Profile" class="profile-pic">
+        </a>
+    </div>
+    <div class="profile-item">
+        <p class="profile-title"><strong>Curriculum Vitae</strong></p>
+        <a href="ATS.pdf" target="_blank" class="btn-download" download>
+            <img src="pdfthumb.png" alt="Download CV" class="profile-pic">
+        </a>
+    </div>
+    <div class="profile-item">
+        <p class="profile-title"><strong>Infographic</strong></p>
+        <a href="Infographic_roadmap_merged.pdf" target="_blank" class="btn-download" download>
+            <img src="Infographic.png" alt="Infographic" class="profile-pic">
+        </a>
+    </div>
+</div>
 
+<div class="linkedin-profile">
+    <p class="profile-title"><strong>LinkedIn Profile</strong></p>
     <div class="badge-wrapper">
-        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="mohamedmostafaali" data-version="v1">
-            <a class="badge-base__link LI-simple-link" href="https://eg.linkedin.com/in/mohamedmostafaali?trk=profile-badge"></a>
-        </div>
+        <a href="https://eg.linkedin.com/in/mohamedmostafaali?trk=profile-badge" target="_blank" rel="noopener noreferrer">
+            <img src="linkedinlogo.png" alt="LinkedIn Profile" class="profile-pic">
+        </a>
     </div>
+</div>
+
+
 </aside>
 
 
@@ -159,9 +168,7 @@
 
             <section class="certifications">
                 <h2>Certifications</h2>
-      	        <p>(On PCs, the certifications are arranged from left to right, showcasing each one visually in a grid format. On mobile devices, they are displayed from top to bottom.)</p>
-                <br>
-                <div class="certification-grid">
+      	        <div class="certification-grid">
                     <img src="amit0.jpg" alt="Certification 7">
                     <img src="amit1.jpg" alt="Certification 8">
                     <img src="tryhackme2.png" alt="Certification 6">
