--- a/index.html
+++ b/index.html
@@ -41,39 +41,43 @@
 
     <!-- New section for profiles and documents -->
     <div class="profile-links">
-    <div class="profile-item">
-        <p class="profile-title"><strong>TryHackMe Profile</strong></p>
-        <a href="https://tryhackme.com/p/mohamedmostafa11" target="_blank" rel="noopener noreferrer">
-            <img src="tryhackme.jpg" alt="TryHackMe Profile" class="profile-pic">
+<div class="linkedin-profile">
+    <p class="profile-title"><strong>LinkedIn Profile</strong></p>
+    <div class="badge-wrapper">
+        <a href="https://www.linkedin.com/in/mohamedmostafaali" target="_blank">
+            <img src="linkedinlogo.png" alt="LinkedIn Profile" class="profile-pic">
         </a>
     </div>
-    <div class="profile-item">
-        <p class="profile-title"><strong>Credly Profile</strong></p>
-        <a href="https://www.credly.com/users/mohamed-mostafa.03888777" target="_blank" rel="noopener noreferrer">
-            <img src="credlylogo.png" alt="Credly Profile" class="profile-pic">
-        </a>
-    </div>
+
     <div class="profile-item">
         <p class="profile-title"><strong>Curriculum Vitae</strong></p>
         <a href="ATS.pdf" target="_blank" class="btn-download" download>
             <img src="pdfthumb.png" alt="Download CV" class="profile-pic">
         </a>
     </div>
+
+    <div class="profile-item">
+        <p class="profile-title"><strong>TryHackMe Profile</strong></p>
+        <a href="https://tryhackme.com/p/mohamedmostafa11" target="_blank" rel="noopener noreferrer">
+            <img src="tryhackme.jpg" alt="TryHackMe Profile" class="profile-pic">
+        </a>
+    </div>
+
     <div class="profile-item">
         <p class="profile-title"><strong>Infographic</strong></p>
         <a href="Infographic_roadmap_merged.pdf" target="_blank" class="btn-download" download>
             <img src="Infographic.png" alt="Infographic" class="profile-pic">
         </a>
     </div>
-</div>
 
-<div class="linkedin-profile">
-    <p class="profile-title"><strong>LinkedIn Profile</strong></p>
-    <div class="badge-wrapper">
-        <a href="https://eg.linkedin.com/in/mohamedmostafaali?trk=profile-badge" target="_blank" rel="noopener noreferrer">
-            <img src="linkedinlogo.png" alt="LinkedIn Profile" class="profile-pic">
+    <div class="profile-item">
+        <p class="profile-title"><strong>Credly Profile</strong></p>
+        <a href="https://www.credly.com/users/mohamed-mostafa.03888777" target="_blank" rel="noopener noreferrer">
+            <img src="credlylogo.png" alt="Credly Profile" class="profile-pic">
         </a>
     </div>
+</div>
+
 </div>
 
 
