--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="profile-item">
         <p class="profile-title"><strong>Curriculum Vitae</strong></p>
-        <a href="ATS.pdf" target="_blank" class="btn-download" download>
+        <a href="ATS_CV_93.pdf" target="_blank" class="btn-download" download>
             <img src="pdfthumb.png" alt="Download CV" class="profile-pic">
         </a>
     </div>
@@ -163,6 +163,7 @@
         <li><img src="CIB0.jpg" alt="CIB Certificate 1"></li>
         <li><img src="CIB1.jpg" alt="CIB Certificate 2"></li>
         <li><img src="CIB2.jpg" alt="CIB Certificate 3"></li>
+	<li><img src="CIB3.jpg" alt="CIB Certificate 4"></li>
     </ul>
     <p><strong>- Internship at NBE (National Bank of Egypt)</strong>, August 2024, <strong>IT department</strong></p>
     <ul class="internship-certificates">
